# rust-mini-gpt

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: tokenizer.ron
src/: batcher.rs  config.rs  custom_dataloader.rs  custom_tokenizer.rs  dataloader.rs  dataset.rs  distributed_data_parallel.rs  lib.rs  main.rs  model.rs  primitives.rs  tokenizer.rs  training.rs
